--- a/Grouper/app/src/main/res/values/colors.xml
+++ b/Grouper/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#5bbcdf</color>
-    <color name="colorPrimaryDark">#04abd4</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#639bff</color>
+    <color name="colorPrimaryDark">#5b6ee1</color>
+    <color name="colorAccent">#5fcde4</color>
 </resources>
