--- a/Grouper/app/src/main/res/layout/activity_lists.xml
+++ b/Grouper/app/src/main/res/layout/activity_lists.xml
@@ -18,7 +18,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center"
-        android:background="@color/colorGreyed">
+        android:background="@color/colorWhite">
 
         <ProgressBar
             android:layout_width="wrap_content"
