--- a/Grouper/app/src/main/res/menu/options_menu.xml
+++ b/Grouper/app/src/main/res/menu/options_menu.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android" >
     <item android:id="@+id/search"
         android:title="@string/search_title"
-        android:icon="@drawable/ic_search"
+        android:icon="@drawable/ic_srch"
         app:showAsAction="collapseActionView|ifRoom"
         app:actionViewClass="android.widget.SearchView" />
 </menu>
